--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <version>${guava.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
     </dependencies>
 
     <build>
